# wca-reg-ids

./: Cargo.toml  \
src/: country_names.rs  main.rs  person.rs
